2000-04-17  Paul Eggert  <eggert@twinsun.com>

	Do CRLF munging only if HAVE_DOS_FILE_CONTENTS, instead of
	having it depend on O_BINARY (which leads to incorrect results
	on BeOS, VMS, and MacOS).

	* bootstrap/Makefile.try (DEFS): Add -DHAVE_DOS_FILE_CONTENTS.
	* src/system.h (SET_BINARY): Define only if HAVE_DOS_FILE_CONTENTS.
	(O_BINARY): Do not define.

	* m4/dosfile.m4: Define HAVE_DOS_FILE_CONTENTS if it appears we're
	using DOS.

	* src/grep.c (undossify_input, fillbuf, dosbuf.c, prline, main):
	Depend on HAVE_DOS_FILE_CONTENTS, not O_BINARY, when handling CRLF
	matters.
	(grepfile, main): Depend on SET_BINARY, not O_BINARY, when
	handling binary files on hosts that care about text versus binary.

2000-04-17  Paul Eggert

	* lib/getpagesize.h (getpagesize): Define to B_PAGE_SIZE if
	__BEOS__ is defined.  Based on a fix by Bruno Haible
	<haible@clisp.cons.org>.

2000-04-17  Bruno Haible

	* src/system.h [BeOS]: Ignore O_BINARY.
	* src/getpagesize.h [BeOS]: Define getpagesize() as B_PAGE_SIZE.

2000-04-10  Paul Eggert

	* doc/grep.1, doc/grep.texi, NEWS: -C now requires an operand.
	* src/grep.c (short_options, long_options, main, usage): Likewise.
	(context_length_arg): Renamed from ck_atoi.  Now reports an error
	and exits if the number is out of range for a context length.
	(get_nondigit_option): New function, which checks for overflow
	correctly, and which does not parse nonadjacent strings of digits
	into a single number.
	(main): Use get_nondigit_option instead of doing the code inline.
	With -A, -B, and -C, optarg is now guaranteed to be nonzero.

2000-04-08  Paul Eggert

	Now that we know that the input is always terminated by a
	newline before the matching algorithms see it, clean up the
	matching algorithms so that they no longer need to modify the
	input by inserting a sentinel newline, and no longer worry
	about running off the end of the buffer due to a missing sentinel.
	
	* src/grep.c (nlscan, prpending, prtext, grepbuf): Do not